fix(page): items spacing

--- a/highlights/src/templates/HighlightsContainer/styles.css
+++ b/highlights/src/templates/HighlightsContainer/styles.css
@@ -4,18 +4,18 @@
 }
 
 .highlight-grid{
-    margin-top: 50px;
+    margin-top: 13vh;
+    margin-bottom: 13vh;
     display: grid;
     gap: 50px;
     justify-items: safe center;
     grid-template-columns: repeat(3, 25vw);
 }
 
-
 .highlights-section-title{
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    margin-top: 70px;
+    margin-top: 13vh;
     color: #474747;
 }
 
@@ -26,7 +26,7 @@
     font-size: 15px;
     line-height: 23px;
     color: #474747;
-    margin-top: 15px;
+    margin-top: 3vh;
 }
 
 .highlights-section-title strong{
